修改模版文件-完成打包处理

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>${project.name}.${project.version}</finalName>
+        <finalName>${project.name}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -103,7 +103,7 @@
                         <id>make-assembly</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>assembly</goal>
+                            <goal>single</goal>
                         </goals>
                     </execution>
                 </executions>
